<resources>
    <string name="app_name">LED Blaster</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh LED brightnesses</string>

    <string name="heading_steady_light">Steady lighting</string>
    <string name="heading_continuous_fading">Continuous fade modes</string>

    <string name="tv_name" translatable="false">%1$s: %2$d</string>
    <string name="red_desc">Red: %1$d</string>
    <string name="green_desc">Green: %1$d</string>
    <string name="blue_desc">Blue: %1$d</string>

    <string name="btn_apply">Apply</string>
    <string name="btn_mode1">Start fading</string>
    <string name="btn_modes_off">Stop fading</string>
    <string name="btn_all_off">Turn all LEDs off</string>
    <string name="btn_w_ON">ON</string>
    <string name="btn_w_OFF">OFF</string>

    <string name="url_get_steady" translatable="false">w=%1$s&amp;r=%2$s&amp;g=%3$s&amp;b=%4$s&amp;time=%5$d</string>
    <string name="url_get_fademode" translatable="false">mode=%1$d&amp;time=%2$d</string>

    <string name="toast_no_network">No network connection!</string>
    <string name="toast_no_led_data">No LED data saved, trying to update from network...</string>
    <string name="toast_updating_leds">Updating LEDs from network...</string>
    <string name="toast_not_home_network">You are not connected to your home network, led-blaster may not work as expected</string>
    <string name="toast_fading_leds">Fading LEDs</string>
    <string name="toast_fademode_started">Continuous fading started</string>
    <string name="toast_error_http">An HTTP error occurred. Error code: %1$d</string>
    <string name="toast_error_parsing">An error occurred reading the brightness</string>

    <string name="pref_title_home_network">Home Network</string>
    <string name="pref_sum_home_network">SSID of the WiFi network in which led-blaster is accessible</string>
    <string name="pref_title_url">LED Blaster fade URL</string>
    <string name="pref_sum_url">HTTP URL to Led Blaster\'s fade.php file</string>
    <string name="pref_title_setup_url">LED Blaster colors file</string>
    <string name="pref_sum_setup_url">HTTP URL to Led Blaster\'s colors.csv file</string>
    <string name="pref_title_brightness_url">LED Blaster current brightness file</string>
    <string name="pref_sum_brightness_url">HTTP URL to Led Blaster\'s example.csv file</string>
    <string name="pref_title_two_floors">White LEDs are upstairs</string>
    <string name="pref_sum_two_floors">Tick if the white LED strip is upstairs</string>
    <string name="pref_title_fadetime">Fade time</string>
    <string name="pref_sum_fadetime">Time LED Blaster shall need to complete fading (in ms)</string>

    <string name="prefgroup_network">Network</string>
    <string name="prefgroup_fading">Fading</string>
    <string name="prefgroup_other">Other</string>

    <string name="title_activity_settings">Settings</string>

</resources>
