<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefgroup_network"
        android:key="prefgroup_network">
        <EditTextPreference
            android:key="pref_url"
            android:title="@string/pref_title_url"
            android:summary="@string/pref_sum_url"
            android:inputType="textUri"/>

        <EditTextPreference
            android:key="pref_setup_url"
            android:title="@string/pref_title_setup_url"
            android:summary="@string/pref_sum_setup_url"
            android:inputType="textUri"/>

        <EditTextPreference
            android:key="pref_brightness_url"
            android:title="@string/pref_title_brightness_url"
            android:summary="@string/pref_sum_brightness_url"
            android:inputType="textUri"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefgroup_fading"
        android:key="prefgroup_fading">
        <EditTextPreference
            android:key="pref_fadetime"
            android:inputType="number"
            android:title="@string/pref_title_fadetime"
            android:summary="@string/pref_sum_fadetime"/>
    </PreferenceCategory>

</PreferenceScreen>