<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_1"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_marginBottom="0dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/linear_layout_steady_lighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/heading_steady_light"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/heading_steady_light"
            android:textSize="16dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp" >

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btn_apply"/>

            <Button
                android:id="@+id/btn_all_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_apply"
                android:layout_alignTop="@+id/btn_apply"
                android:text="@string/btn_all_off"/>
        </RelativeLayout>



    </LinearLayout>
</android.support.v7.widget.CardView>

