<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- White -->
        <TextView
            android:id="@+id/tv_white"
            android:text="@string/white_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_white"
            android:padding="5dp"/>

        <SeekBar
            android:id="@+id/sb_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cb_white"
            android:layout_below="@id/tv_white"
            android:max="1000"
            android:padding="5dp" />



        <!-- Red -->
        <TextView
            android:id="@+id/tv_red"
            android:text="@string/red_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_white"/>

        <CheckBox
            android:id="@+id/cb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_red"
            android:padding="5dp"/>

        <SeekBar
            android:id="@+id/sb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cb_red"
            android:layout_below="@id/tv_red"
            android:max="1000"
            android:padding="5dp" />

        <!-- Green -->
        <TextView
            android:id="@+id/tv_green"
            android:text="@string/green_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_red"/>

        <CheckBox
            android:id="@+id/cb_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_green"
            android:padding="5dp"/>

        <SeekBar
            android:id="@+id/sb_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cb_green"
            android:layout_below="@id/tv_green"
            android:max="1000"
            android:padding="5dp" />

        <!-- Blue -->
        <TextView
            android:id="@+id/tv_blue"
            android:text="@string/blue_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_green"/>

        <CheckBox
            android:id="@+id/cb_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_blue"
            android:padding="5dp"/>

        <SeekBar
            android:id="@+id/sb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cb_blue"
            android:layout_below="@id/tv_blue"
            android:max="1000"
            android:padding="5dp" />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_blue"
            android:layout_marginTop="15dp"
            android:text="@string/btn_apply"/>

    </RelativeLayout>

</LinearLayout>
