<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_2"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="0dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading_continuous_fading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_continuous_fading"
            android:textSize="16dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusableInTouchMode="true">

            <ImageButton
                android:id="@+id/btn_dec_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_previous_item"/>

            <EditText
                android:id="@+id/et_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="number"/>

            <ImageButton
                android:id="@+id/btn_inc_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_next_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_mode1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_mode1"/>

            <Button
                android:id="@+id/btn_modes_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_modes_off"/>

        </LinearLayout>



    </LinearLayout>
</android.support.v7.widget.CardView>